# learning-rust-serverless

./: readme.md
earthquake-trends/: readme.md
earthquake-trends/infrastructure/: package-lock.json  package.json
earthquake-trends/infrastructure/lib/: earthquake-trends.ts  lambda-function.ts
earthquake-trends/rust_lambda/: Cargo.toml
earthquake-trends/rust_lambda/src/: http_handler.rs  lib.rs
lambda-api/: .gitignore  Cargo.toml  Makefile  sample_request.json
lambda-api/src/: http_handler.rs  lib.rs  main.rs
