[package]
name = "lambda-api"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.35", features = ["parquet", "lazy"] }
tokio = { version = "1", features = ["macros", "fs"] }
serde_json = "1.0.134"
anyhow = "1.0.95"
reqwest = { version="0.12.11", features=["native-tls-vendored"] }
chrono = { version = "0.4.38", features = ["serde"] }
lambda_http = "0.13.0"
serde = { version = "1.0.217", features = ["derive"] }
rand = "0.8.5"